--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "",
-  "name": "Szkolny Zegarek",
+  "name": "MyClock",
   "icons": [
     {
       "src": "favicon-32x32.png",
@@ -8,8 +8,8 @@
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#171717",
+  "background_color": "#171717"
 }
